Update the podcast page to list podcasts, simplify language, remove email

--- a/src/podcast.html
+++ b/src/podcast.html
@@ -149,6 +149,8 @@
   ```
 -->
 
+
+<!-- 
 <div class="bg-white">
   <div class="max-w-7xl mx-auto px-4 py-12 sm:px-6 lg:py-16 lg:px-8">
     <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
@@ -174,7 +176,29 @@
     </div>
   </div>
 </div>
+ -->
 
+<!-- This example requires Tailwind CSS v2.0+ -->
+<div class="bg-indigo-700">
+  <div class="max-w-2xl mx-auto text-center py-16 px-4 sm:py-20 sm:px-6 lg:px-8">
+    <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
+      <span class="block">Discover Real People</span>
+      <span class="block">Overcoming Security Problems</span>
+    </h2>
+    <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
+    
+  </div>
+
+<iframe title="The Security Podcast of Silicon Valley" allowtransparency="true" height="340" width="100%" style="border: none; overflow: scroll; -webkit-overflow-scrolling: touch; min-width: 100%; *width: 100%; width: 1px;" scrolling="no" data-name="pb-iframe-player" src="https://www.podbean.com/player-v2/?i=gr2vk-b4bf98-pbblog-playlist&share=1&download=1&rtl=0&fonts=Arial&skin=1&order=episodic&limit=10&filter=all&ss=a713390a017602015775e868a2cf26b0&btn-skin=11&size=240" allowfullscreen=""></iframe>
+
+  </div>
+</div>
+
+<div class="bg-white">
+  <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
+    
+  </div>
+</div>
 
 <!-- This example requires Tailwind CSS v2.0+ -->
 <div class="bg-white">
@@ -185,7 +209,7 @@
 
     <p class="text-center text-base font-semibold uppercase text-gray-600 tracking-wider"></p> -->
     <p class="text-center text-base font-semibold uppercase text-gray-600 tracking-wider">
-      Subscribe everywhere you listen to podcasts
+      Listen wherever you get your podcasts
     </p>
     <div class="mt-6 grid grid-cols-2 gap-0.5 md:grid-cols-3 lg:mt-8">
       <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50 hover:bg-gray-200">
