--- a/src/blog_ciso_guide_to_hipaa_encryption.html
+++ b/src/blog_ciso_guide_to_hipaa_encryption.html
@@ -247,7 +247,7 @@
             <b>Summary:</b> It's economically viable and preudent to spend $6,000 / year on healthcare information protection mechanisms as long as you have at least 32,000 healthcare records within your system, or $60,000 / year if you have 320,000 records.
           </p>
 
-          <h3>How Peacemakr's Optimizes ROI for HIPAA Information Protection Compliance</h3>
+          <h3>How Peacemakr Optimizes ROI for HIPAA Information Protection Compliance</h3>
           <p>
             Peacemakr is a drop-in solution for HIPAA Information Protection, which takes no more than a couple of hours to integrate. No overpriced BAA's are required, and the technology itself integrates into your tech stack through Open-Source SDKs, so there are no GTM delays.
           </p>
