--- a/src/media.html
+++ b/src/media.html
@@ -103,7 +103,7 @@
                 </p>
                 <a class="mt-2 block">
                     <p class="text-xl font-semibold text-gray-900">
-                        The CISO's Guide to HIPAA Encryption Requirements
+                        The CISO's Guide to HIPAA’s Information Protection Requirements
                     </p>
                     <p class="mt-3 text-base text-gray-500">
                         HIPAA itself is composed of core legislation, along with several addendums called rules. But just like every law, only through recent enforcement and judicial actions can we understand HIPAA information protection requirements.
