--- a/src/index.html
+++ b/src/index.html
@@ -82,13 +82,13 @@
               <h1>
                 <span class="text-4xl mt-1 block text-sxl tracking-tight font-extrabold text-5xl xl:text-6xl">
                   <span class="block text-gray-900 text-5xl xl:text-6xl">Peacemakr</span>
-                  <span class="block text-indigo-600">E2E-Encryption<br>at your service</span>
+                  <span class="block text-indigo-600">Eliminate the Impact of Data Breaches</span>
                   <!-- <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0"></p> -->
 
                 </span>
                 </h1>
                  <p class="mt-3 text-base text-gray-500 mt-5 text-xl lg:text-lg xl:text-xl">
-                     Eliminate all your data risks with one simple, proven, and affordable platform that instantly raises your security bar.
+                     Hackers are going to hack. But you can protect your data with simple, proven, and affordable E2E-Encryption-as-a-Service.
                 </p>
             </div>
 
@@ -177,7 +177,7 @@
         </svg>
         <div class="ml-3">
           <dt class="text-lg leading-6 font-medium text-gray-900">
-            Raise your security bar with Zero-Trust
+            Zero-Trust
           </dt>
           <dd class="mt-2 text-base text-gray-500">
             Customize your security strength to meet the highest standard, without having to place your trust in external vendors.
@@ -192,10 +192,10 @@
         </svg>
         <div class="ml-3">
           <dt class="text-lg leading-6 font-medium text-gray-900">
-            Drop-in E2E-Encryption-as-a-Service
+            Quick integration
           </dt>
           <dd class="mt-2 text-base text-gray-500">
-            From client registration to key rotation, Peacemakr has the tough problems handled so you can focus on your business goals. 
+            From client registration to key rotation, Peacemakr has the tough problems handled so you can focus on your business. 
           </dd>
         </div>
       </div>
@@ -207,10 +207,10 @@
         </svg>
         <div class="ml-3">
           <dt class="text-lg leading-6 font-medium text-gray-900">
-            Open-source transparency
+            Open-source community
           </dt>
           <dd class="mt-2 text-base text-gray-500">
-            Engineers always know what’s happening and how it works. Peacemakr’s E2E-Encryption SDKs are available to the community.
+            Join forces with Peacemakr’s open-source community as we build the data security platform we have always needed, but never found.
           </dd>
         </div>
       </div>
