--- a/src/index.html
+++ b/src/index.html
@@ -224,7 +224,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">
-        How expensive are a data breaches without Peacemakr?
+        How expensive are data breaches without Peacemakr?
       </h2>
       <p class="mt-6 text-xl text-gray-500 sm:mt-4">
         In addition to irreparable damage to your reputation,
