Speak to a CISO

--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,7 @@
             Open-source community
           </dt>
           <dd class="mt-2 text-base text-gray-500">
-            Join forces with Peacemakr’s open-source community as we build the data security platform we have always needed, but never found.
+            Join the community that built the data security platform that businesses need to eliminate the impact of data breaches.
           </dd>
         </div>
       </div>
