Add in a risk calculator

--- a/src/solutions.html
+++ b/src/solutions.html
@@ -99,7 +99,7 @@
               Security for Your Products
             </h2>
             <p class="mt-4 max-w-3xl text-lg text-indigo-100">
-              Learn why Peacemakr is the best choice for startups and small businesses in Finance, Healthcare, Defense, and Insurance.
+              Take 30-minutes to learn how Peacemakr eliminates data breaches from both known and unknown threats in Finance, Healthcare, Defense, and Insurance.
             </p>
           </div>
           <div class="mt-12 sm:w-full sm:max-w-md lg:mt-0 lg:ml-8 lg:flex-1">
@@ -122,6 +122,277 @@
         </div>
       </div>
     </div>
+
+
+<script type="text/javascript">
+    
+
+function numberWithCommas(x) {
+    return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+}
+
+function dataTypeBarToText(x) {
+  if (x == "1") {
+    return "HIPAA Protected Health Information"
+  } else if (x == "2") {
+    return "GDPR Personally Identifiable Information"
+  } else if (x == "3") {
+    return "CCPA Personally Identifiable Information"
+  }  else if (x == "4") {
+    return "NAIC Protected Information"
+  } else if (x == "5") {
+    return "Double Extortion Ransomware"
+  } else if (x == "6") {
+    return "Consumers' Financial Protected Data"
+  } else if (x == "7") {
+    return "Business Critical Infrastructure"
+  } else if (x == "8") {
+    return "Trade Secrets"
+  } else if (x == "8") {
+    return "National Security Protected Information"
+  }
+}
+
+var totalRecordsDisplay = null
+var totalRecordsBar = null
+var dataTypeBar = null
+var dataTypeDisplay = null
+var estimatedCostDisplay = null
+var estimatedFinesDisplay = null
+var estimatedDaysDisplay = null
+
+// Constants
+var MaxDataTotalLossRecords = 1000000
+var AvgCostOfDataBreachPerRecord = 150
+
+var AvgDaysOfDataBreachRecovery = 279
+var ShortestBreach = 14
+var longestBreach = 558
+
+// GDPR
+var largestGDPRFines = 55000000
+var lowestGDPRFine = 5000000
+
+var CCPAPerRecord = 7500
+
+var NAICFineTotals = 50000
+
+var doubleExtortion = 50000000
+
+var ConsumerFinancialProtectedDataAvgFine = 5633802
+
+var BusinessCriticalInfraFine = 0
+
+var TradeSecretsAvgFine = 0
+var TradeSecretsAvgLoss = 300000000000
+
+function getFines(dataType, numRecords) {
+  fineCost = 0
+
+  // HIPAA PHI
+  if (dataType == 1) {
+    // HIPAA Enforcement Fine
+    if (numRecords >= 10000 && numRecords <= 100000) {
+      fineCost = fineCost + (26 * numRecords)
+    } else if (numRecords >= 100000) {
+      fineCost = fineCost + 2600000
+    }
+  }
+
+  // GDPR
+  if (dataType == 2) {
+    fineCost = numRecords * (largestGDPRFines / MaxDataTotalLossRecords)
+  }
+
+  // CCPA
+  if (dataType == 3) {
+    // This is just insane, so take 1/2 of the max
+    fineCost = numRecords * CCPAPerRecord / 2
+  }
+
+  // NAIC
+  if (dataType == 4) {
+    if (numRecords <= 50000) {
+      fineCost = numRecords * (NAICFineTotals / 50000)
+    } else {
+      fineCost = NAICFineTotals
+    }
+  }
+
+  // Double Extortion
+  if (dataType == 5) {
+    fineCost = 0
+  }
+
+  // Consumers' Financial Protected Data
+  if (dataType == 6) {
+    fineCost = numRecords * (ConsumerFinancialProtectedDataAvgFine / MaxDataTotalLossRecords)
+  }
+
+  return Math.floor(fineCost)
+}
+
+function getEstimatedCost(dataType, numRecords) {
+  totalCost = getFines(dataType, numRecords)
+  totalCost = totalCost + (AvgCostOfDataBreachPerRecord * numRecords)
+  return totalCost
+}
+
+function getEstimatedDays(dataType, numRecords) {
+  // 1-50,000 we setp forward by .0053 days per record
+  if (numRecords <= 50000) {
+    return 14 + Math.floor(numRecords * .0053)
+  }
+
+  // 50,000 - 1,000,000, we step forward by
+  return 279 + Math.floor(numRecords * .000279)
+}
+
+function showVal() {
+  if (totalRecordsDisplay == null) {
+    totalRecordsBar = document.getElementById("total_records_bar");
+    totalRecordsDisplay = document.getElementById("total_records_display");
+    dataTypeBar = document.getElementById("data_type_bar");
+    dataTypeDisplay = document.getElementById("data_type_display")
+    estimatedCostDisplay = document.getElementById("estimated_cost_display")
+    estimatedFinesDisplay = document.getElementById("estimated_fines_display")
+    estimatedDaysDisplay = document.getElementById("estimated_days_display")
+  }
+
+  // Update input displays
+  dataTypeDisplay.innerHTML = dataTypeBarToText(dataTypeBar.value)
+  totalRecordsDisplay.innerHTML = numberWithCommas(totalRecordsBar.value)
+
+  // Compute Costs
+  estimatedCostDisplay.innerHTML = "$" + numberWithCommas(getEstimatedCost(dataTypeBar.value, totalRecordsBar.value))
+
+    // Compute Fines
+  estimatedFinesDisplay.innerHTML = "$" + numberWithCommas(getFines(dataTypeBar.value, totalRecordsBar.value))
+
+    // Compute Days
+  estimatedDaysDisplay.innerHTML = getEstimatedDays(dataTypeBar.value, totalRecordsBar.value) + " Days"
+
+
+
+}
+</script>
+
+<style>
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+</style>
+
+
+<!-- This example requires Tailwind CSS v2.0+ -->
+<div class="bg-gray-50 pt-12 sm:pt-16">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="max-w-3xl mx-auto text-center">
+      <h2 class="text-4xl font-extrabold text-gray-900 sm:text-4xl">
+        Estimate the cost of your next data breach
+      </h2>
+      <p class="mt-3 text-xl text-gray-500 sm:mt-4">
+        Depending on your industry, different regulations apply and recent breach reports can be used to estimate the impact of a data breach without Peacemakr.
+      </p>
+    </div>
+  </div>
+
+
+  <div class="mt-10 pb-12 bg-gray-50 sm:pb-16">
+    <div class="relative">
+      <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="max-w-4xl mx-auto">
+          <dl class="rounded-lg bg-gray-50 shadow-lg sm:grid sm:grid-cols-2">
+            <div class="flex flex-col border-b border-gray-100 p-6 text-center sm:border-0 sm:border-r">
+              <dt class="order-2 mt-2 text-lg leading-6 font-medium text-gray-500">
+                Record Type
+              </dt>
+              <form>
+                <input type="range" min="1" max="8" value="1" class="slider" id="data_type_bar" oninput="showVal()" onchange="showVal()">
+              </form>
+              <dd id="data_type_display" class="order-1 text-4xl font-extrabold text-gray-900">
+                HIPAA Protected Health Information
+              </dd>
+            </div>
+            <div class="flex flex-col border-t border-b border-gray-100 p-6 text-center sm:border-0 sm:border-l sm:border-r">
+              <dt class="order-2 mt-2 text-lg leading-6 font-medium text-gray-500">
+                Total Records Breached
+              </dt>
+              <form>
+                <input type="range" min="1" max="1000000" value="50000" class="slider" id="total_records_bar" oninput="showVal()" onchange="showVal()">
+              </form>
+              <dd id="total_records_display" class="order-1 text-4xl font-extrabold text-gray-900">
+                50,000
+              </dd>
+            </div>
+          </dl>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <div class=" pb-12 bg-gray-50 sm:pb-16">
+    <div class="relative">
+      <div class="absolute inset-0 h-1/2 bg-gray-50"></div>
+      <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="max-w-4xl mx-auto">
+          <dl class="rounded-lg bg-gray-50 shadow-lg sm:grid sm:grid-cols-3">
+            <div class="flex flex-col border-b border-gray-100 p-6 text-center sm:border-0 sm:border-r">
+              <dt class="order-2 mt-2 text-lg leading-6 font-medium text-gray-500">
+                Est. Remediation Time
+              </dt>
+              <dd id="estimated_days_display" class="order-1 text-4xl font-extrabold text-red-700">
+                279 Days
+              </dd>
+            </div>
+            <div class="flex flex-col border-t border-b border-gray-100 p-6 text-center sm:border-0 sm:border-l sm:border-r">
+              <dt class="order-2 mt-2 text-lg leading-6 font-medium text-gray-500">
+                Est. Fines
+              </dt>
+              <dd id="estimated_fines_display" class="order-1 text-4xl font-extrabold text-red-700">
+                $1,300,000
+              </dd>
+            </div>
+            <div class="flex flex-col border-t border-gray-100 p-6 text-center sm:border-0 sm:border-l">
+              <dt class="order-2 mt-2 text-lg leading-6 font-medium text-gray-500">
+                Est. Remediation Cost
+              </dt>
+              <dd id="estimated_cost_display" class="order-1 text-4xl font-extrabold text-red-700">
+                $8,800,000
+              </dd>
+            </div>
+          </dl>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 
     <div class="py-12 bg-white">
