--- a/src/solutions.html
+++ b/src/solutions.html
@@ -312,10 +312,10 @@ function showVal() {
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="max-w-3xl mx-auto text-center">
       <h2 class="text-4xl font-extrabold text-gray-900 sm:text-4xl">
-        Estimate the cost of your next data breach
+        Estimating the Impact of a Data Breach
       </h2>
       <p class="mt-3 text-xl text-gray-500 sm:mt-4">
-        Depending on your industry, different regulations apply and recent breach reports can be used to estimate the impact of a data breach without Peacemakr.
+        Penal regulatory fines may apply depending on your industry, while total remediation time and cost are estimates from historical data.
       </p>
     </div>
   </div>
@@ -333,7 +333,7 @@ function showVal() {
               <form>
                 <input type="range" min="1" max="8" value="1" class="slider" id="data_type_bar" oninput="showVal()" onchange="showVal()">
               </form>
-              <dd id="data_type_display" class="order-1 text-4xl font-extrabold text-gray-900">
+              <dd id="data_type_display" class="order-1 text-3xl font-extrabold text-gray-900">
                 HIPAA Protected Health Information
               </dd>
             </div>
@@ -344,7 +344,7 @@ function showVal() {
               <form>
                 <input type="range" min="1" max="1000000" value="50000" class="slider" id="total_records_bar" oninput="showVal()" onchange="showVal()">
               </form>
-              <dd id="total_records_display" class="order-1 text-4xl font-extrabold text-gray-900">
+              <dd id="total_records_display" class="order-1 text-3xl font-extrabold text-gray-900">
                 50,000
               </dd>
             </div>
@@ -386,6 +386,9 @@ function showVal() {
               </dd>
             </div>
           </dl>
+          <p class="mt-3 text-sm text-center text-gray-700 sm:mt-4">
+              More detailed analysis available upon request.
+            </p>
         </div>
       </div>
     </div>
