--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
               <h1>
                 <span class="text-4xl mt-1 block text-sxl tracking-tight font-extrabold text-5xl xl:text-6xl">
                   <span class="block text-gray-900 text-5xl xl:text-6xl">Peacemakr</span>
-                  <span class="block text-indigo-600">Eliminate the Impact of Data Breaches</span>
+                  <span class="block text-indigo-600">Stop Data Breaches</span>
                   <!-- <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0"></p> -->
 
                 </span>
