--- a/src/solutions.html
+++ b/src/solutions.html
@@ -21,6 +21,7 @@
     <meta name="twitter:description"
           content="Data Security simplified."/>
     <script src="navbar.js" type="text/javascript"></script>
+    <script src="risk_calculator.js" type="text/javascript"></script>
 
     @@include('./navigation_styling.html')
 
@@ -122,160 +123,6 @@
         </div>
       </div>
     </div>
-
-
-<script type="text/javascript">
-    
-
-function numberWithCommas(x) {
-    return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-}
-
-function dataTypeBarToText(x) {
-  if (x == "1") {
-    return "HIPAA Protected Health Information"
-  } else if (x == "2") {
-    return "GDPR Personally Identifiable Information"
-  } else if (x == "3") {
-    return "CCPA Personally Identifiable Information"
-  }  else if (x == "4") {
-    return "NAIC Protected Information"
-  } else if (x == "5") {
-    return "Double Extortion Ransomware"
-  } else if (x == "6") {
-    return "Consumers' Financial Protected Data"
-  } else if (x == "7") {
-    return "Business Critical Infrastructure"
-  } else if (x == "8") {
-    return "Trade Secrets"
-  } else if (x == "8") {
-    return "National Security Protected Information"
-  }
-}
-
-var totalRecordsDisplay = null
-var totalRecordsBar = null
-var dataTypeBar = null
-var dataTypeDisplay = null
-var estimatedCostDisplay = null
-var estimatedFinesDisplay = null
-var estimatedDaysDisplay = null
-
-// Constants
-var MaxDataTotalLossRecords = 1000000
-var AvgCostOfDataBreachPerRecord = 150
-
-var AvgDaysOfDataBreachRecovery = 279
-var ShortestBreach = 14
-var longestBreach = 558
-
-// GDPR
-var largestGDPRFines = 55000000
-var lowestGDPRFine = 5000000
-
-var CCPAPerRecord = 7500
-
-var NAICFineTotals = 50000
-
-var doubleExtortion = 50000000
-
-var ConsumerFinancialProtectedDataAvgFine = 5633802
-
-var BusinessCriticalInfraFine = 0
-
-var TradeSecretsAvgFine = 0
-var TradeSecretsAvgLoss = 300000000000
-
-function getFines(dataType, numRecords) {
-  fineCost = 0
-
-  // HIPAA PHI
-  if (dataType == 1) {
-    // HIPAA Enforcement Fine
-    if (numRecords >= 10000 && numRecords <= 100000) {
-      fineCost = fineCost + (26 * numRecords)
-    } else if (numRecords >= 100000) {
-      fineCost = fineCost + 2600000
-    }
-  }
-
-  // GDPR
-  if (dataType == 2) {
-    fineCost = numRecords * (largestGDPRFines / MaxDataTotalLossRecords)
-  }
-
-  // CCPA
-  if (dataType == 3) {
-    // This is just insane, so take 1/2 of the max
-    fineCost = numRecords * CCPAPerRecord / 2
-  }
-
-  // NAIC
-  if (dataType == 4) {
-    if (numRecords <= 50000) {
-      fineCost = numRecords * (NAICFineTotals / 50000)
-    } else {
-      fineCost = NAICFineTotals
-    }
-  }
-
-  // Double Extortion
-  if (dataType == 5) {
-    fineCost = 0
-  }
-
-  // Consumers' Financial Protected Data
-  if (dataType == 6) {
-    fineCost = numRecords * (ConsumerFinancialProtectedDataAvgFine / MaxDataTotalLossRecords)
-  }
-
-  return Math.floor(fineCost)
-}
-
-function getEstimatedCost(dataType, numRecords) {
-  totalCost = getFines(dataType, numRecords)
-  totalCost = totalCost + (AvgCostOfDataBreachPerRecord * numRecords)
-  return totalCost
-}
-
-function getEstimatedDays(dataType, numRecords) {
-  // 1-50,000 we setp forward by .0053 days per record
-  if (numRecords <= 50000) {
-    return 14 + Math.floor(numRecords * .0053)
-  }
-
-  // 50,000 - 1,000,000, we step forward by
-  return 279 + Math.floor(numRecords * .000279)
-}
-
-function showVal() {
-  if (totalRecordsDisplay == null) {
-    totalRecordsBar = document.getElementById("total_records_bar");
-    totalRecordsDisplay = document.getElementById("total_records_display");
-    dataTypeBar = document.getElementById("data_type_bar");
-    dataTypeDisplay = document.getElementById("data_type_display")
-    estimatedCostDisplay = document.getElementById("estimated_cost_display")
-    estimatedFinesDisplay = document.getElementById("estimated_fines_display")
-    estimatedDaysDisplay = document.getElementById("estimated_days_display")
-  }
-
-  // Update input displays
-  dataTypeDisplay.innerHTML = dataTypeBarToText(dataTypeBar.value)
-  totalRecordsDisplay.innerHTML = numberWithCommas(totalRecordsBar.value)
-
-  // Compute Costs
-  estimatedCostDisplay.innerHTML = "$" + numberWithCommas(getEstimatedCost(dataTypeBar.value, totalRecordsBar.value))
-
-    // Compute Fines
-  estimatedFinesDisplay.innerHTML = "$" + numberWithCommas(getFines(dataTypeBar.value, totalRecordsBar.value))
-
-    // Compute Days
-  estimatedDaysDisplay.innerHTML = getEstimatedDays(dataTypeBar.value, totalRecordsBar.value) + " Days"
-
-
-
-}
-</script>
 
 <style>
 /* Tooltip container */
@@ -572,6 +419,7 @@ function showVal() {
 </footer>
 
 <script src="index.js"></script>
+
 </body>
 
 </html>
