--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
                 </span>
                 </h1>
                  <p class="mt-3 text-base text-gray-500 mt-5 text-xl lg:text-lg xl:text-xl">
-                     Hackers are going to hack. But you can protect your data with simple, proven, and affordable E2E-Encryption-as-a-Service.
+                     Protect your data with simple, proven, and affordable E2E-Encryption-as-a-Service.
                 </p>
             </div>
 
