--- a/src/solutions.html
+++ b/src/solutions.html
@@ -75,8 +75,8 @@
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-                        <span class="block xl:inline">Data Security<br/></span>
-                        <span class="block text-indigo-600 xl:inline">for Regulated Industries</span>
+                        <span class="block xl:inline">Stop Data Breaches<br/></span>
+                        <span class="block text-indigo-600 xl:inline">in Regulated Industries</span>
                     </h1>
                 </div>
             </main>
