Fix font size on small screens

--- a/src/index.html
+++ b/src/index.html
@@ -259,7 +259,7 @@
               <dt class="order-2 mt-2 text-xlg leading-6 font-medium text-gray-500">
                 Estimated cost of all 8.4+ billion records lost in Q1 2020
               </dt>
-              <dd class="order-1 text-9xl font-extrabold text-red-800">
+              <dd class="order-1 text-5xl lg:text-9xl font-extrabold text-red-800">
                 $1.2+ Trillion
               </dd>
             </div>
