--- a/src/solutions.html
+++ b/src/solutions.html
@@ -74,9 +74,9 @@
 
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                 <div class="sm:text-center lg:text-left">
-                    <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-                        <span class="block xl:inline">Stop Data Breaches<br/></span>
-                        <span class="block text-indigo-600 xl:inline">in Regulated Industries</span>
+                    <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-4xl md:text-5xl">
+                        <span class="block lg:inline">Regulatory Compliance that</span>
+                        <span class="block text-indigo-600 lg:inline">Stops Data Breaches</span>
                     </h1>
                 </div>
             </main>
@@ -97,28 +97,16 @@
         <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
           <div class="lg:w-0 lg:flex-1">
             <h2 class="text-3xl font-extrabold tracking-tight text-white">
-              Security for Your Products
+              CISO's need security, not just compliance.
             </h2>
             <p class="mt-4 max-w-3xl text-lg text-indigo-100">
               Take 30-minutes to learn how Peacemakr eliminates data breaches from both known and unknown threats in Finance, Healthcare, Defense, and Insurance.
             </p>
           </div>
-          <div class="mt-12 sm:w-full sm:max-w-md lg:mt-0 lg:ml-8 lg:flex-1">
-            <form class="sm:flex" action="https://peacemakr.us1.list-manage.com/subscribe/post?u=ac9d1e71791321a3f00ebbf6d&amp;id=1f0cf83e57" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form">
-              <input type="hidden" value="64" name="group[380002][64]" id="mce-group[380002]-380002-2">
-              <label for="emailAddress" class="sr-only">Email address</label>
-              <input type="email" value="" name="EMAIL" id="mce-EMAIL" required class="w-full border-white px-5 py-3 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white rounded-md" placeholder="Enter your email">
-              <button type="submit" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white sm:mt-0 sm:ml-3 sm:w-auto sm:flex-shrink-0" name="subscribe" id="mc-embedded-subscribe">
-                Get whitepaper
-              </button>
-
-              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
-
-              <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                <input type="text" name="b_ac9d1e71791321a3f00ebbf6d_1f0cf83e57" tabindex="-1" value="">
-              </div>
-
-            </form>
+          <div class="lg:flex-1 items-center justify-center">
+            <a href="https://calendly.com/peacemakr" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white mt-0 ml-3 w-auto flex-shrink-0">
+              Schedule a 30-Minute Demo
+            </a>
           </div>
         </div>
       </div>
@@ -157,12 +145,12 @@
 <!-- This example requires Tailwind CSS v2.0+ -->
 <div class="bg-gray-50 pt-12 sm:pt-16">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="max-w-3xl mx-auto text-center">
+    <div class="max-w-4xl mx-auto text-center">
       <h2 class="text-4xl font-extrabold text-gray-900 sm:text-4xl">
-        Estimating the Impact of a Data Breach
+        Estimate the Cost of a Data Breach
       </h2>
       <p class="mt-3 text-xl text-gray-500 sm:mt-4">
-        Penal regulatory fines may apply depending on your industry, while total remediation time and cost are estimates from historical data.
+        In addition to irreparable damage to your reputation, penal regulatory fines may apply, while total remediation time and cost are estimates from historical data.
       </p>
     </div>
   </div>
