--- a/src/solutions.html
+++ b/src/solutions.html
@@ -97,10 +97,10 @@
         <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
           <div class="lg:w-0 lg:flex-1">
             <h2 class="text-3xl font-extrabold tracking-tight text-white">
-              CISO's need security, not just compliance.
+              You deserve real security,<br> not just a checkbox.
             </h2>
             <p class="mt-4 max-w-3xl text-lg text-indigo-100">
-              Take 30-minutes to learn how Peacemakr eliminates data breaches from both known and unknown threats in Finance, Healthcare, Defense, and Insurance.
+              Take 30-minutes to learn how Peacemakr eliminates data breaches in Finance, Healthcare, Defense, and Insurance.
             </p>
           </div>
           <div class="lg:flex-1 items-center justify-center">
