tracking-tight gone

--- a/src/solutions.html
+++ b/src/solutions.html
@@ -302,7 +302,7 @@
     <div class="absolute inset-0 bg-indigo-600 mix-blend-multiply" aria-hidden="true"></div>
   </div>
   <div class="relative max-w-9xl mx-auto py-24 px-4 sm:py-32 sm:px-6 lg:px-8">
-    <h1 class="text-5xl font-extrabold tracking-tight text-white sm:text-5xl lg:text-6xl">Why is Peacemakr Different?</h1>
+    <h1 class="text-5xl font-extrabold text-white sm:text-5xl lg:text-6xl">Why is Peacemakr Different?</h1>
     <p class="mt-6 text-xl text-indigo-100 max-w-3xl">Peacemakr's E2E-Encryption stops data breaches by keeping data encrypted for its entire lifecycle, instead of just when it moves between systems (TLS) or sits on a persistence layer (At-Rest).</p>
     <a href="https://calendly.com/peacemakr" class="text-base font-medium text-white hover:text-indigo-100">Learn more<span aria-hidden="true"> &rarr;</span></a>
   </div>
