--- a/src/solutions.html
+++ b/src/solutions.html
@@ -144,7 +144,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-medium text-gray-900">Is TLS Broken?</h3>
-          <p class="mt-4 text-base text-gray-500">No. TLS provides nessesary and robust data privacy as it moves between systems. However, modern data breaches almost always lose data directly from inside a compromised system, so TLS is nessesary but not sufficient to prevent a data breach.</p>
+          <p class="mt-4 text-base text-gray-500">TLS only provides data privacy as data moves between systems. It does not protect data when an adversary is inside your system.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="#" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
@@ -160,7 +160,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-medium text-gray-900">Is At-Rest Encryption Broken?</h3>
-          <p class="mt-4 text-base text-gray-500">No. At-Rest Encryption protect your data on physical storage media. If someone gains physical access to a data center and walks out with your data, you're safe. However, it does not protect data when an adversary is inside your system. </p>
+          <p class="mt-4 text-base text-gray-500">At-Rest Encryption only protect your data on physical storage media. It does not protect data when an adversary is inside your system.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="#" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
@@ -292,21 +292,19 @@
 
 
 
-
-
-
 <!-- This example requires Tailwind CSS v2.0+ -->
 <div class="relative bg-indigo-600">
   <div class="absolute inset-0">
     <img class="w-full h-full object-cover" src="/images/team-hands.png" alt="">
     <div class="absolute inset-0 bg-indigo-600 mix-blend-multiply" aria-hidden="true"></div>
   </div>
-  <div class="relative max-w-9xl mx-auto py-24 px-4 sm:py-32 sm:px-6 lg:px-8">
-    <h1 class="text-5xl font-extrabold text-white sm:text-5xl lg:text-6xl">Why is Peacemakr Different?</h1>
-    <p class="mt-6 text-xl text-indigo-100 max-w-3xl">Peacemakr's E2E-Encryption stops data breaches by keeping data encrypted for its entire lifecycle, instead of just when it moves between systems (TLS) or sits on a persistence layer (At-Rest).</p>
-    <a href="https://calendly.com/peacemakr" class="text-base font-medium text-white hover:text-indigo-100">Learn more<span aria-hidden="true"> &rarr;</span></a>
+  <div class="text-center relative max-w-9xl mx-auto py-34 px-4 sm:py-32 sm:px-6 lg:px-8">
+    <h1 class="text-5xl text-tight font-extrabold text-white sm:text-5xl lg:text-6xl">E2E-Encryption Fixes It</h1>
+    <p class="mt-6 text-xl text-indigo-100 mx-auto max-w-3xl">Peacemakr's E2E-Encryption stops data breaches by keeping data encrypted for its entire lifecycle, instead of just when it moves between systems (TLS) or sits on a persistence layer (At-Rest).</p>
   </div>
 </div>
+
+
 
 
 
