--- a/src/solutions.html
+++ b/src/solutions.html
@@ -127,7 +127,7 @@
     </div>
     <div class="relative max-w-7xl mx-auto py-24 px-4 sm:py-32 sm:px-6 lg:px-8">
       <h1 class="text-4xl font-extrabold tracking-tight text-white md:text-5xl lg:text-6xl">Why is Data Security Broken?</h1>
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">TLS and Encryption-at-Rest are necessary data security tools, but they can not stop an adversary that breaks into a system from stealing that system's data.</p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">TLS and Encryption-at-Rest are necessary data security tools, but they do not stop an adversary that breaks into your system from stealing data.</p>
     </div>
   </div>
 
@@ -144,7 +144,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-medium text-gray-900">Is TLS Broken?</h3>
-          <p class="mt-4 text-base text-gray-500">TLS only provides data privacy as data moves between systems. It does not protect data when an adversary is inside your system.</p>
+          <p class="mt-4 text-base text-gray-500">TLS only provides data privacy as data moves between systems. It does not protect your data when an adversary is inside your system.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="#" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
@@ -159,8 +159,8 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m3.536 9.192l-3.536 3.536M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-5 0a4 4 0 11-8 0 4 4 0 018 0z" />
             </svg>
           </div>
-          <h3 class="text-xl font-medium text-gray-900">Is At-Rest Encryption Broken?</h3>
-          <p class="mt-4 text-base text-gray-500">At-Rest Encryption only protect your data on physical storage media. It does not protect data when an adversary is inside your system.</p>
+          <h3 class="text-xl font-medium text-gray-900">Is Encryption-at-Rest Broken?</h3>
+          <p class="mt-4 text-base text-gray-500">Encryption-at-Rest only protect your data on physical storage media. It does not protect your data when an adversary is inside your system.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="#" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
@@ -210,7 +210,7 @@
         Estimate the Cost of a Data Breach
       </h2>
       <p class="mt-3 text-xl text-gray-500 sm:mt-4">
-        In addition to irreparable damage to your reputation, penal regulatory fines may apply, while total remediation time and cost are estimates from historical data.
+        In addition to irreparable damage to your reputation, penal regulatory fines may apply, while total remediation time and cost can be estimated from historical data.
       </p>
     </div>
   </div>
@@ -299,8 +299,8 @@
     <div class="absolute inset-0 bg-indigo-600 mix-blend-multiply" aria-hidden="true"></div>
   </div>
   <div class="text-center relative max-w-9xl mx-auto py-34 px-4 sm:py-32 sm:px-6 lg:px-8">
-    <h1 class="text-5xl text-tight font-extrabold text-white sm:text-5xl lg:text-6xl">E2E-Encryption Fixes It</h1>
-    <p class="mt-6 text-xl text-indigo-100 mx-auto max-w-3xl">Peacemakr's E2E-Encryption stops data breaches by keeping data encrypted for its entire lifecycle, instead of just when it moves between systems (TLS) or sits on a persistence layer (At-Rest).</p>
+    <h1 class="text-5xl text-tight font-extrabold text-white sm:text-5xl lg:text-6xl"> E2E-Encryption Stop Breaches</h1>
+    <p class="mt-6 text-xl text-indigo-100 mx-auto max-w-4xl">Peacemakr's E2E-Encryption-as-a-Service stops data breaches by keeping your data encrypted for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest).</p>
   </div>
 </div>
 
