The Cybersecurity Paradigm Is Broken. Here's How to Fix It

--- a/src/blog_ciso_guide_to_hipaa_encryption.html
+++ b/src/blog_ciso_guide_to_hipaa_encryption.html
@@ -17,7 +17,7 @@
     <meta property="og:description"
           content="Data Security simplified."/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://peacemakr.io/media.html"/>
+    <meta property="og:url" content="https://peacemakr.io/blog_the_cybersecurity_paradigm_is_broken.html"/>
     <meta itemprop="name" content="Peacemakr">
     <meta itemprop="description"
           content="Data Security simplified.">
