Folders actually work now

--- a/src/navigation.html
+++ b/src/navigation.html
@@ -6,7 +6,7 @@
                 <div class="flex mr-8">
                     <a href="/">
                         <span class="sr-only">Peacemakr</span>
-                        <img class="h-8 w-auto" src="./images/p_logo.png">
+                        <img class="h-8 w-auto" src="/images/p_logo.png">
                     </a>
                 </div>
                 <div class="-mr-2 -my-2 md:hidden">
@@ -24,7 +24,7 @@
                     </button>
                 </div>
                 <nav id="site-menu" class="hidden md:flex space-x-10">
-                    <a href="solutions.html" class="font-medium text-gray-500 hover:text-indigo-600">Solutions</a>
+                    <a href="/solutions.html" class="font-medium text-gray-500 hover:text-indigo-600">Solutions</a>
                     <div class="dropdown cursor-pointer relative">
                         <!-- Item active: "text-gray-900", Item inactive: "text-gray-500" -->
                         <button class="engineers_button text-gray-500 group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" aria-expanded="true">
@@ -43,7 +43,7 @@
                             <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
                                 <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8">
 
-                                    <a href="engineers.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                    <a href="/engineers.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
                                         <!-- Heroicon name: outline/shield-check -->
                                         <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
@@ -58,7 +58,7 @@
                                         </div>
                                     </a>
 
-                                    <a href="engineers_faqs.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                    <a href="/engineers_faqs.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
                                         <!-- Heroicon name: outline/view-grid -->
                                         <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" />
@@ -94,7 +94,7 @@
                         <div class="dropdown-content top-0 hidden z-10 -ml-4 mt-6 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
                             <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
                                 <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8">
-                                    <a href="media.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                    <a href="/media.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
                                         <!-- Heroicon name: outline/bookmark-alt -->
                                         <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 4v12l-4-2-4 2V4M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
@@ -109,7 +109,7 @@
                                         </div>
                                     </a>
 
-                                    <a href="podcast.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                    <a href="/podcast.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
                                         <!-- Heroicon name: outline/calendar -->
                                         <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="pricing.html" class="font-medium text-gray-500 hover:text-indigo-600">Pricing</a>
+                    <a href="/pricing.html" class="font-medium text-gray-500 hover:text-indigo-600">Pricing</a>
                 </nav>
                 <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
                     <a href="https://admin.peacemakr.io/#/login" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">
@@ -147,7 +147,7 @@
                 <div class="pt-5 pb-6 px-5">
                     <div class="flex items-center justify-between">
                         <div>
-                            <img class="h-8 w-auto" src="./images/p_logo.png">
+                            <img class="h-8 w-auto" src="/images/p_logo.png">
                         </div>
                         <div class="-mr-2">
                             <button type="button"
@@ -166,27 +166,27 @@
                 </div>
                 <div class="py-6 px-5 space-y-6">
                     <div class="grid grid-cols-2 gap-y-4 gap-x-8">
-                        <a href="solutions.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
+                        <a href="/solutions.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
                             Solutions
                         </a>
 
-                        <a href="engineers.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
+                        <a href="/engineers.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
                             SDKs
                         </a>
 
-                        <a href="engineers_faqs.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
+                        <a href="/engineers_faqs.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
                             FAQ
                         </a>
 
-                        <a href="media.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
+                        <a href="/media.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
                             Blogs
                         </a>
 
-                        <a href="podcast.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
+                        <a href="/podcast.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
                             Security Talks
                         </a>
 
-                        <a href="pricing.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
+                        <a href="/pricing.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
                             Pricing
                         </a>
                     </div>
