--- a/src/solutions.html
+++ b/src/solutions.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Peacemakr | solutions</title>
+    <title>Peacemakr | Solutions for Regulatory Compliance that Stops Data Breaches</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./images/peacemakr.ico" type="image/x-icon"/>
     <meta property="og:title" content="Peacemakr"/>
     <meta property="og:description"
-          content="Data Security simplified."/>
+          content="Solutions for Regulatory Compliance that Stops Data Breaches"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://peacemakr.io/solutions.html"/>
     <meta itemprop="name" content="Peacemakr">
     <meta itemprop="description"
-          content="Data Security simplified.">
+          content="Solutions for Regulatory Compliance that Stops Data Breaches">
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="Peacemakr"/>
     <meta name="twitter:description"
-          content="Data Security simplified."/>
+          content="Solutions for Regulatory Compliance that Stops Data Breaches"/>
     <script src="navbar.js" type="text/javascript"></script>
     <script src="risk_calculator.js" type="text/javascript"></script>
 
