Update title to be more descriptive
info link: https://developers.google.com/search/docs/advanced/appearance/good-titles-snippets#page-titles

--- a/src/engineers_faqs.html
+++ b/src/engineers_faqs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <title>Peacemakr | faq</title>
+    <title>Peacemakr: What is Peacemakr and End-to-End Encryption?</title>
     <meta content="width=device-width,minimum-scale=1" name="viewport">
     <link href="styles.css" rel="stylesheet">
     <link href="./images/peacemakr.ico" rel="shortcut icon" type="image/x-icon" />
