--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Peacemakr | Peacemakr</title>
+    <title>Peacemakr: Protect your data with simple, proven, and affordable E2E-Encryption-as-a-Service</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./images/peacemakr.ico" type="image/x-icon"/>
