Update Blog html names to be separated by hyphen
Renaming the file to be hyphen separated and keep the old urls to be redirected to the new URL.
https://www.ecreativeim.com/blog/index.php/2011/03/30/seo-basics-hyphen-or-underscore-for-seo-urls/

--- a/src/media.html
+++ b/src/media.html
@@ -67,6 +67,16 @@
 <!--Navigation bar-->
 @@include('./navigation.html')
 <!--Main body-->
+<!-- This is for Parcel to include the old blog files when building the docs.
+     We include them so the old link can still be directed to the new URL. The old ones are redirected to the new format.
+     We rename the file name to be separate by hyphen for SEO. (https://www.ecreativeim.com/blog/index.php/2011/03/30/seo-basics-hyphen-or-underscore-for-seo-urls/)
+-->
+<a href="blog/when_is_the_right_time_for_a_startup_to_take_data_security_seriously.html"/>
+<a href="blog/the_human_impact_of_data_breaches.html"/>
+<a href="blog/the_cybersecurity_paradigm_is_broken.html"/>
+<a href="blog/ciso_guide_to_hipaa_encryption.html"/>
+<!-- This is for Parcel to include the old blog files when building the docs -->
+
 <div class="relative bg-white overflow-hidden">
     <div class="max-w-7xl mx-auto">
         <div class="relative z-8 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
@@ -110,7 +120,7 @@
                     </p>
                 </a>
                 <div class="mt-3">
-                    <a href="blog/when_is_the_right_time_for_a_startup_to_take_data_security_seriously.html"
+                    <a href="blog/when-is-the-right-time-for-a-startup-to-take-data-security-seriously.html"
                        class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
                         Read full story
                     </a>
@@ -131,7 +141,7 @@
                     </p>
                 </a>
                 <div class="mt-3">
-                    <a href="blog/the_human_impact_of_data_breaches.html"
+                    <a href="blog/the-human-impact-of-data-breaches.html"
                        class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
                         Read full story
                     </a>
@@ -152,7 +162,7 @@
                     </p>
                 </a>
                 <div class="mt-3">
-                    <a href="blog/the_cybersecurity_paradigm_is_broken.html"
+                    <a href="blog/the-cybersecurity-paradigm-is-broken.html"
                        class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
                         Read full story
                     </a>
@@ -172,7 +182,7 @@
                     </p>
                 </a>
                 <div class="mt-3">
-                    <a href="blog/ciso_guide_to_hipaa_encryption.html"
+                    <a href="blog/ciso-guide-to-hipaa-encryption.html"
                        class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
                         Read full story
                     </a>
