--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,12 @@
 
         gtag('config', 'G-69K0GEH6J9');
     </script>
+    <style>
+        a.sahsa {
+            color: #4f46e5;
+            text-decoration: underline
+        }
+    </style>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
             new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -82,13 +88,13 @@
               <h1>
                 <span class="text-4xl mt-1 block text-sxl tracking-tight font-extrabold text-5xl xl:text-6xl">
                   <span class="block text-gray-900 text-5xl xl:text-6xl">Peacemakr</span>
-                  <span class="block text-indigo-600">Stop Data Breaches</span>
+                  <span class="block text-indigo-600">The easiest way to protect data</span>
                   <!-- <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0"></p> -->
 
                 </span>
                 </h1>
                  <p class="mt-3 text-base text-gray-500 mt-5 text-xl lg:text-lg xl:text-xl">
-                     Protect your data with simple, proven, and affordable E2E-Encryption-as-a-Service.
+                     The <a href="https://github.com/peacemakr-io" class="sahsa hover:text-indigo-800">Open-Source Data Security Platform</a> for all data security needs.
                 </p>
             </div>
 
