--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,14 @@
         gtag('config', 'G-69K0GEH6J9');
     </script>
     <style>
-        a.sahsa {
-            color: #4f46e5;
-            text-decoration: underline
+        a.gray_link {
+            color: #757575;
+
+        }
+        a.gray_link:hover {
+          color: #3949AB;
+          text-decoration: underline;
+          transition: 0.3s
         }
     </style>
     <!-- Google Tag Manager -->
@@ -86,15 +91,15 @@
           <div class="lg:grid gap-2 lg:grid-cols-2 lg:gap-8 items-start">
             <div class="text-center md:max-w-2xl md:mx-auto w-full lg:text-left">
               <h1>
-                <span class="text-4xl mt-1 block text-sxl tracking-tight font-extrabold text-5xl xl:text-6xl">
-                  <span class="block text-gray-900 text-5xl xl:text-6xl">Peacemakr</span>
+                <span class="text-4xl mt-1 block text-sxl tracking-tight font-extrabold text-6xl xl:text-7xl">
+                  <span class="block text-gray-900 text-6xl xl:text-7xl">Peacemakr</span>
                   <span class="block text-indigo-600">The easiest way to protect data</span>
                   <!-- <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0"></p> -->
 
                 </span>
                 </h1>
-                 <p class="mt-3 text-base text-gray-500 mt-5 text-xl lg:text-lg xl:text-xl">
-                     The <a href="https://github.com/peacemakr-io" class="sahsa hover:text-indigo-800">Open-Source Data Security Platform</a> for all data security needs.
+                 <p class="mt-3 text-base text-gray-500 mt-5 text-xl lg:text-lg">
+                     <a href="https://github.com/peacemakr-io" class="gray_link">Simple, proven, and open-source solutions</a> that automatically tag and protect data according to dynamic security policies for <a href="./solutions.html" class="gray_link">any regulation</a>
                 </p>
             </div>
 
@@ -121,7 +126,7 @@
           </div>
            <!-- These are the dots to the left -->
           <div class="invisible lg:visible mt-1 relative max-w-min mx-auto">
-                <svg class="absolute top-3 right-1/2 transform -translate-x-20 -translate-y-24" width="640" height="784" fill="none" viewBox="0 0 640 784">
+                <svg class="absolute top-3 right-1/2 transform -translate-x-20 -translate-y-20" width="640" height="784" fill="none" viewBox="0 0 640 784">
                       <defs>
                         <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
                           <rect x="0" y="0" width="4" height="4" class="text-indigo-200" fill="currentColor" />
@@ -157,9 +162,9 @@
             </div>
             <div class="mt-8 flex lg:mt-0">
                 <div class="hadow">
-                    <a href="/pricing.html"
-                       class="font-extrabold text-white sm:text-3xl inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
-                        See available plans
+                    <a href="https://admin.peacemakr.io/#/signup"
+                       class="font-extrabold text-white sm:text-3xl inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                        Get API keys
                     </a>
                 </div>
             </div>
