--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
                 </span>
                 </h1>
                  <p class="mt-3 text-base text-gray-500 mt-5 text-xl lg:text-lg">
-                     <a href="https://github.com/peacemakr-io" class="gray_link">Simple, proven, and open-source solutions</a> that automatically tag and protect data according to dynamic security policies for <a href="./solutions.html" class="gray_link">any regulation</a>
+                     <a href="https://github.com/peacemakr-io" class="gray_link">Simple, proven, and open-source solutions</a> that automatically protect data according to security policies for <a href="./solutions.html" class="gray_link">any regulation</a>
                 </p>
             </div>
 
