--- a/src/media.html
+++ b/src/media.html
@@ -114,7 +114,7 @@
                 </p>
                 <a class="mt-2 block">
                     <p class="text-xl font-semibold text-gray-900">
-                        T-Mobile Hack 2021—Will Corporations Finally Sit Up and Face the Cybersecurity Problem?
+                        T-Mobile Hack 2021—What Hard Lessons Must We Learn?
                     </p>
                     <p class="mt-3 text-base text-gray-500">
                         T-Mobile was hacked again and, as is usual for data breaches, big numbers are used by the media to convey the attack’s impact—47.8 million is the official figure of how many accounts were breached. The stolen data included SSNs, first and last names, date of birth, driver’s license numbers, ID information, telephone numbers, and IMEI and IMSI numbers—unique numbers tied to each device and subscriber. 
