--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,18 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./images/peacemakr.ico" type="image/x-icon"/>
-    <meta property="og:title" content="Peacemakr"/>
+    <meta property="og:title" content="Peacemakr, policy-based data protection"/>
     <meta property="og:description"
-          content="Data Security simplified."/>
+          content="Simple, proven, and open-source solutions that automatically protect data according to security policies for any regulation"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://peacemakr.io/"/>
-    <meta itemprop="name" content="Peacemakr">
+    <meta itemprop="name" content="Peacemakr, policy-based data protection">
     <meta itemprop="description"
-          content="Data Security simplified.">
+          content="Simple, proven, and open-source solutions that automatically protect data according to security policies for any regulation">
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="Peacemakr"/>
+    <meta name="twitter:title" content="Peacemakr, policy-based data protection"/>
     <meta name="twitter:description"
-          content="Data Security simplified."/>
+          content="Simple, proven, and open-source solutions that automatically protect data according to security policies for any regulation"/>
     <script src="navbar.js" type="text/javascript"></script>
 
     @@include('./navigation_styling.html')
@@ -36,11 +36,12 @@
     <style>
         a.gray_link {
             color: #757575;
+            border-bottom: 1px solid transparent;
 
         }
         a.gray_link:hover {
           color: #3949AB;
-          text-decoration: underline;
+          border-color: #3949AB;
           transition: 0.3s
         }
     </style>
@@ -93,13 +94,12 @@
               <h1>
                 <span class="text-4xl mt-1 block text-sxl tracking-tight font-extrabold text-6xl xl:text-7xl">
                   <span class="block text-gray-900 text-6xl xl:text-7xl">Peacemakr</span>
-                  <span class="block text-indigo-600">The easiest way to protect data</span>
-                  <!-- <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0"></p> -->
+                  <span class="block text-indigo-600">Policy-based data protection</span>
 
                 </span>
                 </h1>
                  <p class="mt-3 text-base text-gray-500 mt-5 text-xl lg:text-lg">
-                     <a href="https://github.com/peacemakr-io" class="gray_link">Simple, proven, and open-source solutions</a> that automatically protect data according to security policies for <a href="./solutions.html" class="gray_link">any regulation</a>
+                     <a href="https://github.com/peacemakr-io" class="gray_link">Simple, proven, and open-source solutions</a> that use security policies to protect data for <a href="./solutions.html" class="gray_link">any regulation</a>
                 </p>
             </div>
 
@@ -107,14 +107,14 @@
 
               <!-- Gray block on the right  -->
               <svg class="invisible lg:visible absolute top-0 left-1/2 transform -translate-x-40 -translate-y-20" width="640" height="784" fill="none" viewBox="0 0 640 784">
-                    <defs>
-                      <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-                        <rect x="0" y="0" width="4" height="4" class="text-indigo-200" fill="currentColor" />
-                      </pattern>
-                    </defs>
-                    <rect y="72" width="640" height="640" class="text-gray-100" fill="currentColor" />
-                    <rect x="118" width="404" height="784" fill="url(#9ebea6f4-a1f5-4d96-8c4e-4c2abf658047)" />
-                  </svg>
+                <defs>
+                  <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
+                    <rect x="0" y="0" width="4" height="4" class="text-indigo-200" fill="currentColor" />
+                  </pattern>
+                </defs>
+                <rect y="72" width="640" height="640" class="text-gray-100" fill="currentColor" />
+                <rect x="118" width="404" height="784" fill="url(#9ebea6f4-a1f5-4d96-8c4e-4c2abf658047)" />
+              </svg>
 <!--               <div class="min-w-max w-full">
                 <img class="rounded-lg h-80 shadow-2xl" src="./images/cyber.jpg">
               </div> -->
@@ -126,14 +126,14 @@
           </div>
            <!-- These are the dots to the left -->
           <div class="invisible lg:visible mt-1 relative max-w-min mx-auto">
-                <svg class="absolute top-3 right-1/2 transform -translate-x-20 -translate-y-20" width="640" height="784" fill="none" viewBox="0 0 640 784">
+                <svg class="absolute top-16 right-1/2 transform -translate-x-20 -translate-y-20" width="640" height="784" fill="none" viewBox="0 0 640 784">
                       <defs>
                         <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
                           <rect x="0" y="0" width="4" height="4" class="text-indigo-200" fill="currentColor" />
                         </pattern>
                       </defs>
-                      <rect x="140" y="50" width="370" height="200" class="text-gray-100" fill="currentColor" />
-                      <rect x="150" y="44" width="460" height="80" fill="url(#9ebea6f4-a1f5-4d96-8c4e-4c2abf658047)" />
+                      <rect x="140" y="0" width="370" height="200" class="text-gray-100" fill="currentColor" />
+                      <rect x="150" y="8" width="460" height="80" fill="url(#9ebea6f4-a1f5-4d96-8c4e-4c2abf658047)" />
                 </svg>
           </div>
         </main>
