--- a/src/index.html
+++ b/src/index.html
@@ -231,7 +231,7 @@
 </div>
 
 <!-- This example requires Tailwind CSS v2.0+ -->
-<div class="bg-gray-50 pt-12 sm:pt-16">
+<!-- <div class="bg-gray-50 pt-12 sm:pt-16">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">
@@ -279,7 +279,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 
 <!-- ENLAI -->
