--- a/src/index.html
+++ b/src/index.html
@@ -478,6 +478,11 @@
 <footer class="bg-gray-900">
     <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
         <div class="flex justify-center space-x-6 md:order-2">
+          <a href="/privacy.html" class="text-gray-400 hover:text-gray-500">
+                <span class="sr-only">Linked</span>
+                Privacy Policy
+            </a>
+            
             <a href="https://www.linkedin.com/company/peacemakr-io" target="_blank"
                class="text-gray-400 hover:text-gray-500">
                 <span class="sr-only">Linked</span>
