Adding initial meta descrption

--- a/src/engineers.html
+++ b/src/engineers.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Peacemakr: SDK simplifies data security</title>
+    <meta name="description" content="Peacemakr provides easy-to-use SDKs that can integrate with any system in 5 minutes. Python. Java. Golang. iOS. Android. Node. Javascript.">
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./images/peacemakr.ico" type="image/x-icon"/>
