--- a/src/engineers_faqs.html
+++ b/src/engineers_faqs.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <title>Peacemakr: What is Peacemakr and End-to-End Encryption?</title>
+    <meta name="description" content="Frequently Asked Questions about Peacemakr, encryption, key management, data security best practices, and more.">
     <meta content="width=device-width,minimum-scale=1" name="viewport">
     <link href="styles.css" rel="stylesheet">
     <link href="./images/peacemakr.ico" rel="shortcut icon" type="image/x-icon" />
