--- a/src/media.html
+++ b/src/media.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Peacemakr: Latest News on Data Security </title>
+    <meta name="description" content="Learn about modern day data security challenges and news.">
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <!-- <link href="/dist/css/app.3f5912c237ddd38c8e76debe081c7ca7.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/peacemakr.css">
