--- a/src/podcast.html
+++ b/src/podcast.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Peacemakr: The Security Podcast of Silicon Valley</title>
+    <meta name="description" content="Listen to our CEO, Jon McLachlan, and the respective guests discussing the latest news and trends on Security and Tech.">
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./images/peacemakr.ico" type="image/x-icon"/>
