More CTA updates

--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
 
 <main>
 
-<!-- CTA See Plans -->
+<!-- CTA See Get API keys -->
     <div class="bg-gray-50">
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
             <div>
@@ -462,7 +462,7 @@
           </h2>
           <p class="mt-4 text-lg leading-6 text-indigo-200">Learn the most common data protection opportunities and how Peacemakr works with your infrastructure and products to stop data breaches.</p>
           <br>
-          <a href="https://admin.peacemakr.io/#/signup" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Schedule a Free Data Security Risk Assessment</a>
+          <a href="https://calendly.com/peacemakr" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Schedule a Free Data Security Risk Assessment</a>
         </div>
       </div>
       <div class="-mt-6 aspect-w-5 aspect-h-3 md:aspect-w-2 md:aspect-h-1">
